--- a/src/style.scss
+++ b/src/style.scss
@@ -22,19 +22,28 @@ body{
   padding: 10px;
   padding-bottom: 3rem;
   padding-top: 10px;
-  
 }
 
 .display{
-  width: 100%;
+  box-shadow: none;
+  width: 300px;
   height: 90px;
   overflow: hidden;
   background-color: black;
   &__text{
+  outline: none;  
+  max-width: 100%;
   background-color: black;
-  height: 80%;
-  width: 90%;
-  margin: 0.5rem auto;
+  height: 100%;
+  width: 100%;
+  font-weight: 400;
+  padding: 0;
+  margin: 0 auto;
+  color:white;
+  font-size: 60px;
+  caret-color: transparent;
+  text-align: right;
+  
 }
   
 }
