--- a/src/style.scss
+++ b/src/style.scss
@@ -7,12 +7,13 @@ body {
 
 .calculator {
   position: absolute;
+  padding-left: 0.35rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: black;
   border: 3px solid rgb(138, 130, 17);
-  box-shadow: 0 0 100px #fff;
+  box-shadow: 0 0 50px #fff;
 }
 
 .buttons {
@@ -29,6 +30,8 @@ body {
 }
 
 .display {
+  padding-right: 1rem;
+  border: none;
   box-shadow: none;
   width: 300px;
   height: 90px;
@@ -36,13 +39,13 @@ body {
   background-color: black;
   &__text {
     outline: none;
-    max-width: 100%;
     background-color: black;
     height: 100%;
     width: 100%;
     font-weight: 400;
     padding: 0;
     margin: 0 auto;
+    border: none;
     color: white;
     font-size: 60px;
     caret-color: transparent;
@@ -54,7 +57,7 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   width: 58px;
   height: 58px;
-  border-radius: 50%;
+  border-radius: 30px;
   border: none;
   background-color: rgb(57, 52, 52);
   font-size: 2rem;
