--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,10 @@ h1 {
   box-shadow: 0 0 50px #fff;
 }
 
+.buttons__extra{
+  display: none;
+}
+
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -112,13 +116,16 @@ h1 {
 
 @media screen and (min-width: 768px) {
   h1 {
-    padding-top: 4rem;
+    padding-top: 2rem;
+    margin-bottom:3rem ;
     font-size: 3.5rem;
     font-family: "Orbitron", sans-serif;
   }
  
   .calculator {
-    top: 58%;
+    margin-top: 4rem;
+    top: 460px;
+    height: 630px;
   }
 
   .display {
@@ -156,4 +163,81 @@ h1 {
    border-radius: 39px;
    width: 100%;
   }
+}
+@media screen and (min-width: 1024px) {
+  h1{
+    width: 90vw;
+    padding: 0;
+    margin-top: 2rem;
+  }
+  .calculator{
+    height: 600px;
+    width: 400px;
+  }
+  .button{
+    width: 75px;
+  height: 75px;
+  }
+  .double-zero {
+    grid-column: span 2;
+    border-radius: 30px;
+    width: 100%;
+  }
+}
+
+
+@media screen and (min-width: 1366px) {
+  body{
+  overflow-y: hidden;
+  }
+
+  .buttons__extra{
+    display: unset;
+    
+  }
+ .calculator{
+  height: 555px;
+  width: 480px;
+  margin-top: 1rem;
+ }
+ .button{
+  width: 65px;
+  height: 65px;
+ }
+ 
+ .buttons {
+  &__container{
+    display: flex;
+  }
+  &__extra{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  padding: 10px;
+  padding-bottom: 3rem;
+  padding-top: 10px;
+  }
+}
+
+.double-zero {
+  grid-column: span 2;
+  border-radius: 30px;
+  width: 100%;
+}
+.extra__button{
+  background-color: rgb(82, 113, 82);
+  font-size: 35PX;
+}
+.display{
+  width: 460px;
+}
+}
+@media screen and (max-width: 375px) {
+h1{
+  padding-top: 1rem;
+}
+.calculator{
+  top: 370px;
+  height: 450px;
+}
 }
