--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
+
 body {
   margin: 0;
   height: 100vh;
@@ -11,35 +18,28 @@ h1 {
   margin: 0 auto;
   color: rgb(167, 216, 51);
   text-align: center;
-
   font-size: 2rem;
   font-family: "Orbitron", sans-serif;
-  box-shadow: #fff;
-  text-shadow: 2px 2px 100px rgba(255, 255, 0, 0.5),
-    -2px -2px 100px rgba(255, 255, 0, 0.5);
-  text-shadow: 2px 2px 114px rgba(238, 14, 10, 0.5),
-    -2px -2px 114px rgba(235, 5, 5, 0.5);
-
-  text-shadow: 4px 4px 102px rgba(255, 165, 0, 0.7),
-    -4px -4px 102px rgba(255, 165, 0, 0.7);
+  text-shadow: 2px 2px 100px yellow, -2px -2px 100px yellow;
+  text-shadow: 2px 2px 114px red, -2px -2px 114px red;
+  text-shadow: 4px 4px 102px orange -4px -4px 102px orange;
 }
 .calculator {
   margin: 0 auto;
   position: absolute;
-  padding-left: 0.35rem;
+  padding-left: 0.2rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: black;
   border: 3px solid rgb(138, 130, 17);
-  box-shadow: 0 0 50px #fff;
-}
-
-.buttons__extra{
-  display: none;
+  box-shadow: 0 0 80px #fff;
 }
 
 .buttons {
+  &__extra {
+    display: none;
+  }
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
@@ -58,16 +58,12 @@ h1 {
   box-shadow: none;
   width: 300px;
   height: 90px;
-  overflow: hidden;
   background-color: black;
   &__text {
     outline: none;
     background-color: black;
     height: 100%;
     width: 100%;
-    font-weight: 400;
-    padding: 0;
-    margin: 0 auto;
     border: none;
     color: white;
     font-size: 60px;
@@ -80,14 +76,11 @@ h1 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   width: 58px;
   height: 58px;
-  border-radius: 30px;
+  border-radius: 50%;
   border: none;
   background-color: rgb(57, 52, 52);
   font-size: 2rem;
-  color: beige;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  color: rgb(245, 245, 226);
   &__grey {
     color: black;
     background-color: rgb(149, 146, 146);
@@ -101,7 +94,7 @@ h1 {
   border-radius: 30px;
   width: 100%;
 }
-.display__text__second{
+.display__text__second {
   display: none;
 }
 
@@ -116,12 +109,10 @@ h1 {
 
 @media screen and (min-width: 768px) {
   h1 {
-    padding-top: 2rem;
-    margin-bottom:3rem ;
+    margin-bottom: 3rem;
     font-size: 3.5rem;
-    font-family: "Orbitron", sans-serif;
   }
- 
+
   .calculator {
     margin-top: 4rem;
     top: 460px;
@@ -131,113 +122,100 @@ h1 {
   .display {
     width: 370px;
     height: 160px;
+    &__text {
+      &__second {
+        display: unset;
+        outline: none;
+        background-color: black;
+        height: 40%;
+        width: 100%;
+        font-weight: 400;
+        padding: 0;
+        margin: 0 auto;
+        border: none;
+        color: white;
+        font-size: 40px;
+        caret-color: transparent;
+        text-align: right;
+      }
+      height: 60%;
+    }
   }
-
-  .display__text__second {
-    display: unset;
-    outline: none;
-    background-color: black;
-    height: 40%;
-    width: 100%;
-    font-weight: 400;
-    padding: 0;
-    margin: 0 auto;
-    border: none;
-    color: white;
-    font-size: 40px;
-    caret-color: transparent;
-    text-align: right;
-  }
-  .display__text{
-    height: 60%;
-  }
-
 
   .button {
     width: 80px;
     height: 80px;
-    border-radius: 39px;
     font-size: 2.5rem;
   }
   .double-zero {
-   border-radius: 39px;
-   width: 100%;
+    border-radius: 39px;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1024px) {
-  h1{
-    width: 90vw;
+  h1 {
     padding: 0;
     margin-top: 2rem;
   }
-  .calculator{
+  .calculator {
     height: 600px;
     width: 400px;
   }
-  .button{
+  .button {
     width: 75px;
-  height: 75px;
+    height: 75px;
   }
   .double-zero {
-    grid-column: span 2;
-    border-radius: 30px;
+    border-radius: 40px;
     width: 100%;
   }
 }
 
-
 @media screen and (min-width: 1366px) {
-  body{
-  overflow-y: hidden;
-  }
-
-  .buttons__extra{
+  .buttons__extra {
     display: unset;
-    
   }
- .calculator{
-  height: 555px;
-  width: 480px;
-  margin-top: 1rem;
- }
- .button{
-  width: 65px;
-  height: 65px;
- }
- 
- .buttons {
-  &__container{
-    display: flex;
+  .calculator {
+    height: 555px;
+    width: 480px;
+    margin-top: 1rem;
   }
-  &__extra{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  padding: 10px;
-  padding-bottom: 3rem;
-  padding-top: 10px;
+  .button {
+    width: 65px;
+    height: 65px;
   }
-}
 
-.double-zero {
-  grid-column: span 2;
-  border-radius: 30px;
-  width: 100%;
-}
-.extra__button{
-  background-color: rgb(82, 113, 82);
-  font-size: 35PX;
-}
-.display{
-  width: 460px;
-}
+  .buttons {
+    &__container {
+      display: flex;
+    }
+    &__extra {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      padding: 10px;
+      padding-bottom: 3rem;
+      padding-top: 10px;
+    }
+  }
+
+  .double-zero {
+    width: 100%;
+  }
+  .extra__button {
+    background-color: rgb(82, 113, 82);
+    font-size: 35px;
+  }
+  .display {
+    width: 460px;
+  }
 }
 @media screen and (max-width: 375px) {
-h1{
-  padding-top: 1rem;
-}
-.calculator{
-  top: 370px;
-  height: 450px;
-}
+  h1 {
+    padding-top: 1rem;
+  }
+  .calculator {
+    top: 370px;
+    height: 450px;
+  }
 }
