remove scrolling from magic-wand

--- a/src/style.scss
+++ b/src/style.scss
@@ -208,6 +208,7 @@ h1 {
 
   .button__fraction {
     background-color: rgb(82, 207, 82);
+    overflow: hidden;
   }
   .extra__button {
     background-color: rgb(82, 113, 82);
